ver2. 동영상 업로드, 댓글, 조회수 확인 추가

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XTRH85QLL5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XTRH85QLL5');
+</script>
     <title>NASID</title>
     <meta charset="utf-8">
+</head>
+
     <body>
     <p><h1>NSAID란?</h1></p>
     <img src="NSAID.jpg" width="70%">
-
-    <p><strong><a href="https://ko.wikipedia.org/wiki/%EB%B9%84%EC%8A%A4%ED%85%8C%EB%A1%9C%EC%9D%B4%EB%93%9C%EC%84%B1_%ED%95%AD%EC%97%BC%EC%A6%9D%EC%A0%9C" target="_blank">항염증제(영어: nonsteroidal anti-inflammatory drug , NSAID)</a></strong>는 진통 작용, 해열 작용, 항염증 작용이 있는 약이다.
+    <p><strong><a href="https://ko.wikipedia.org/wiki/%EB%B9%84%EC%8A%A4%ED%85%8C%EB%A1%9C%EC%9D%B4%EB%93%9C%EC%84%B1_%ED%95%AD%EC%97%BC%EC%A6%9D%EC%A0%9C" target="_blank">
+        항염증제(영어: nonsteroidal anti-inflammatory drug , NSAID)</a></strong>는 진통 작용, 해열 작용, 항염증 작용이 있는 약이다.
     손쉽게 사용할 수 있는 NSAIDs는 아스피린, 이부프로펜 및 나프록센이다.
     대부분의 국가에서 일반의약품이므로 처방전 없이 구매가 가능하다.[4] 
     아세트아미노펜은 신체의 항염증 활성이 미미하기 때문에 일반적으로 
@@ -16,7 +28,34 @@
         <li><a href="1.html">아세트아미노펜</a></li>
         <li><a href="2.html">이부프로펜</a></li>
         <li><a href="3.html">나프록센</a></li>
-    </ol>
+    </ol><br><br>
 
+    <P><h3>*참고영상*</h3></P>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE?si=TZKaxcvk4IK7P-Ps" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen></iframe></p>
+
+    <p><div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://nsaid.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </p>
 </body>
     
