--- a/2.html
+++ b/2.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XTRH85QLL5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XTRH85QLL5');
+</script>
+  gtag('config', 'G-XTRH85QLL5');
+</script>
         <h1><u><title>ibuprophen</title></u></h1>
         <meta charset="utf-8">
     </head>
