ver3. css를 이용하여 코드를 간소화 하고 가시성을 좋게 만들었음

--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XTRH85QLL5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,19 +10,25 @@
 
   gtag('config', 'G-XTRH85QLL5');
 </script>
-<title>naproxen</title>
+<title>NSAID-AAP</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1><a href="index.html">NSAID</a></h1><br>
-<ol>
+    <h1><a href="index.html">NSAID</a></h1>
+<div id="grid">
+    <ol>
     <li><a href="1.html">아세트아미노펜</a></li>
     <li><a href="2.html">이부프로펜</a></li>
-    <li><a href="3.html">나프록센</a></li>
-</ol>
-<h2><strong>3.나프록센</strong></h2>
+    <li><a href="3.html"id="active">나프록센</a></i>
+    </ol>
+<div id="article">
+ <h2>3.나프록센</h2>
 <img src="nap.png" width="50%">
 <br><P>1.정의</P>
 <u><a href="https://ko.wikipedia.org/wiki/%EB%82%98%ED%94%84%EB%A1%9D%EC%84%BC" target="_blank" title="위키백과,우리 모두의 백과사전">나프록센(naproxen)</u></a>
 (브랜드명: Aleve, Naprosyn 등)은 통증, 월경통, 또 류머티스 관절염, 발열 등의 염증을 치료하기 위해 사용되는 비스테로이드 항염증제(NSAID)이다.[4] 구강으로 복용한다.[4] 즉각 및 지연 방출성 제제(release formulation)로 구매가 가능하다.[4] 효력은 복용 후 1시간 내에 시작되며 최대 12시간까지 지속된다.[4]
+</div>
+</div>
 </body>
+</html>
