--- a/1.html
+++ b/1.html
@@ -11,15 +11,26 @@
   gtag('config', 'G-XTRH85QLL5');
 </script>
 <title>NSAID-AAP</title>
-
+<meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><a href="index.html">NSAID</a></h1><br>
-<ol>
-    <li><a href="1.html">아세트아미노펜</a></li>
+    <h1><a href="index.html">NSAID</a></h1>
+<div id="grid">
+    <ol>
+    <li><a href="1.html" id="active">아세트아미노펜</a></li>
     <li><a href="2.html">이부프로펜</a></li>
-    <li><a href="3.html">나프록센</a></li>
+    <li><a href="3.html">나프록센</a></i>
+    </ol>
+<!--
+<h1><a href="index.html"><font color="red">NSAID</font></a></h1><br>
+<ol>
+    <li><a href="1.html"><font color="red">아세트아미노펜</font></a></li>
+    <li><a href="2.html"><font color="red">이부프로펜</font></a></li>
+    <li><a href="3.html"><font color="red">나프록센</font></a></i>
 </ol>
+-->
+    <div id="article">
 <h2><strong>1.아세트아미노펜</strong></h2>
 <img src="AAP.png" width="50%">
 <br><P>1.정의</P>
@@ -32,15 +43,7 @@
 몇 년 뒤, 아스피린의 개발사로 유명한 바이엘은 그 당시 불순물로 취급되던 'p-아미노페놀'을 이용하여 아세트아닐리드와 유사한 작용을 하는 '페나세틴(Phenacetin)'을 개발해서 판매하였다.
 그러나 아세트아닐리드와 페나세틴 모두 인체에 치명적인 부작용이 발견되어 1983년에 사용이 금지되었으며,[2] 이후 아세트아닐리드와 페나세틴의 약효는 신체 내 대사작용을 통해 아세트아미노펜으로 변하며 이루어진다는 것이 발견되었다. 이후 꾸준한 연구를 통해 독일에서 아세트아미노펜의 합성에 성공, 이후 영국에서 그 효능이 입증된다.
 제법도 간단한 데다가 독점적인 특허도 진작에 만료된지라, 현재 어지간한 제약회사는 다 제조를 한다고 보면 된다. 그래서 아세틸살리실산(아스피린)과 더불어 학교 실험실에서 한 번씩은 꼭 만들고 넘어가는 의약품이다. 역사성 때문인지 대부분의 교육 과정에서는 아세트아미노펜을 대신하여 아세트아닐리드를 합성한다.
-<table>
-    <tr>
-        <td>cox-1</td>
-        <td>cox-2</td>
-        <td>cox-1 and 2</td>
-    </tr>
-    <tr>
-        <td>ibuprophen</td>
-        <td>celecoxib</td>
-        <td>naproxen</td>
-    </tr>
-    </table></body>
+    </div>
+</div>
+</body>
+</html>
