--- a/2.html
+++ b/2.html
@@ -10,19 +10,19 @@
 
   gtag('config', 'G-XTRH85QLL5');
 </script>
-  gtag('config', 'G-XTRH85QLL5');
-</script>
-        <h1><u><title>ibuprophen</title></u></h1>
+        <title>ibuprophen</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-     <h1><a href="index.html">NSAID</a></h1><br>
+     <h1><a href="index.html">NSAID</a></h1>
+     <div id="grid">
         <ol>
     <li><a href="1.html">아세트아미노펜</a></li>
-    <li><a href="2.html">이부프로펜</a></li>
+    <li><a href="2.html"id="active">이부프로펜</a></li>
     <li><a href="3.html">나프록센</a></li>
         </ol>
-
+      <div id="article">
         <h2>2.이부프로펜</h2>
         <img src="ibu.png" width="50%">
 <p>1.개요</p>
@@ -34,5 +34,6 @@
 <p>3.이성질체-덱시부프로펜</p>
 이부프로펜은 효능이 없는 거울상 이성질체(enantiomer)가 존재한다. (R)-이부프로펜은 효능이 없는 것이고, (S)-이부프로펜은 효능이 있는 것이다. 다만 효능이 없는 (R)-이부프로펜도 체내에 들어오면 (S)-이부프로펜으로 점차 전환된다. 때문에 시중에 판매되는 이부프로펜 약은 대부분 이성질체 혼합물을 그대로 쓰지만, 이 과정에서 위경련 등 위장에 부작용이 나타나기도 한다.
 여기서 효능이 있는 (S)-이부프로펜만 뽑아낸 것이 바로 <a href="https://ko.wikipedia.org/wiki/%EB%8D%B1%EC%8B%9C%EB%B6%80%ED%94%84%EB%A1%9C%ED%8E%9C" target="_blank">덱시부프로펜(dexibuprofen)</a>이다. 오스트리아 Gebro사에서 처음으로 덱시부프로펜을 개발, 상용화했다.[2] 덱시부프로펜은 이론적으로 이부프로펜의 약 70% 정도의 용량만으로도 동일한 수준의 효과를 얻을 수 있으며, 약효도 더 빠르며, 위 자극 부작용 및 신장 독성 부작용을 2/3 수준으로 낮추기 때문에 최근 덱시부프로펜이 각광받으며 이부프로펜을 대체해 나가고 있다. 국내에서도 덱시부펜, 덱스피드, 이지엔6 프로 등 여러 덱시부프로펜 제제가 시판 중이다.
-
+</div>
+</div>
     </body>
